fixed logo spacing after "b"

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,12 +91,12 @@ body {
 
 .main {
   position: relative;
-  top: 45px;
+  top: 48px;
   z-index: 2;
   padding-left: 5px;
 
   @media screen and (width <=768px) {
-    top: 40px;
+    top: 50px;
   }
 }
 
